// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`display node information should handle connector info 1`] = `
<DocumentFragment>
  <div
    class="ant-descriptions ant-descriptions-small ant-descriptions-bordered"
  >
    <div
      class="ant-descriptions-view"
    >
      <table>
        <tbody>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label descItem"
              colspan="1"
            >
              <span>
                Type
              </span>
            </th>
            <td
              class="ant-descriptions-item-content descItem"
              colspan="1"
            >
              <span>
                connector
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`display node information should handle connector info 2`] = `
<DocumentFragment>
  <div
    class="ant-descriptions ant-descriptions-small ant-descriptions-bordered"
  >
    <div
      class="ant-descriptions-view"
    >
      <table>
        <tbody>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label descItem"
              colspan="1"
            >
              <span>
                Type
              </span>
            </th>
            <td
              class="ant-descriptions-item-content descItem"
              colspan="1"
            >
              <span>
                connector
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`display node information should handle node not found error 1`] = `
<DocumentFragment>
  <div
    class="ant-alert ant-alert-warning ant-alert-no-icon"
    data-show="true"
    data-testid="no-node-info"
    role="alert"
  >
    <div
      class="ant-alert-content"
    >
      <div
        class="ant-alert-message"
      >
        No node details available
      </div>
      <div
        class="ant-alert-description"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`display node information should handle streams app info 1`] = `
<DocumentFragment>
  <div
    class="ant-descriptions ant-descriptions-small ant-descriptions-bordered"
  >
    <div
      class="ant-descriptions-view"
    >
      <table>
        <tbody>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label descItem"
              colspan="1"
            >
              <span>
                Type
              </span>
            </th>
            <td
              class="ant-descriptions-item-content descItem"
              colspan="1"
            >
              <span>
                streaming-app
              </span>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label descItem"
              colspan="1"
            >
              <span>
                Kibana Logs
              </span>
            </th>
            <td
              class="ant-descriptions-item-content descItem"
              colspan="1"
            >
              <span>
                <div
                  class="ant-spin ant-spin-spinning ant-spin-show-text"
                >
                  <span
                    class="ant-spin-dot ant-spin-dot-spin"
                  >
                    <i
                      class="ant-spin-dot-item"
                    />
                    <i
                      class="ant-spin-dot-item"
                    />
                    <i
                      class="ant-spin-dot-item"
                    />
                    <i
                      class="ant-spin-dot-item"
                    />
                  </span>
                  <div
                    class="ant-spin-text"
                  >
                    Loading link...
                  </div>
                </div>
              </span>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label descItem"
              colspan="1"
            >
              <span>
                Labels
              </span>
            </th>
            <td
              class="ant-descriptions-item-content descItem"
              colspan="1"
            >
              <span>
                <div
                  class="jsonDetail"
                >
                  <div
                    class="react-json-view"
                    style="font-family: monospace; cursor: default; background-color: rgba(0, 0, 0, 0); position: relative;"
                  >
                    <div
                      class="pretty-json-container object-container"
                    >
                      <div
                        class="object-content"
                      >
                        <div
                          class="object-key-val"
                        >
                          <span>
                            <span
                              style="display: inline-block; cursor: pointer;"
                            >
                              <div
                                class="icon-container"
                                style="display: inline-block; width: 17px;"
                              >
                                <span
                                  class="expanded-icon"
                                >
                                  <svg
                                    fill="currentColor"
                                    style="vertical-align: top; color: rgb(88, 110, 117); height: 1em; width: 1em; padding-left: 2px;"
                                    viewBox="0 0 15 15"
                                  >
                                    <path
                                      d="M0 5l6 6 6-6z"
                                    />
                                  </svg>
                                </span>
                              </div>
                              <span />
                              <span
                                style="display: inline-block; cursor: pointer; font-weight: bold; color: rgb(0, 43, 54);"
                              >
                                {
                              </span>
                            </span>
                            <div
                              class="object-meta-data"
                              style="display: inline-block; padding: 0px 0px 0px 10px;"
                            >
                              <span
                                class="object-size"
                                style="color: rgba(0, 0, 0, 0.3); border-radius: 3px; font-style: italic; margin: 0px 6px 0px 0px; cursor: default;"
                              >
                                5 items
                              </span>
                              <span
                                class="copy-to-clipboard-container"
                                style="vertical-align: top; display: none;"
                                title="Copy to clipboard"
                              >
                                <span
                                  style="cursor: pointer; display: inline;"
                                >
                                  <span
                                    class="copy-icon"
                                  >
                                    <svg
                                      fill="currentColor"
                                      preserveAspectRatio="xMidYMid meet"
                                      style="vertical-align: top; color: rgb(38, 139, 210); font-size: 15px; margin-right: 3px; height: 1em; width: 1em;"
                                      viewBox="0 0 40 40"
                                    >
                                      <g>
                                        <path
                                          d="m30 35h-25v-22.5h25v7.5h2.5v-12.5c0-1.4-1.1-2.5-2.5-2.5h-7.5c0-2.8-2.2-5-5-5s-5 2.2-5 5h-7.5c-1.4 0-2.5 1.1-2.5 2.5v27.5c0 1.4 1.1 2.5 2.5 2.5h25c1.4 0 2.5-1.1 2.5-2.5v-5h-2.5v5z m-20-27.5h2.5s2.5-1.1 2.5-2.5 1.1-2.5 2.5-2.5 2.5 1.1 2.5 2.5 1.3 2.5 2.5 2.5h2.5s2.5 1.1 2.5 2.5h-20c0-1.5 1.1-2.5 2.5-2.5z m-2.5 20h5v-2.5h-5v2.5z m17.5-5v-5l-10 7.5 10 7.5v-5h12.5v-5h-12.5z m-17.5 10h7.5v-2.5h-7.5v2.5z m12.5-17.5h-12.5v2.5h12.5v-2.5z m-7.5 5h-5v2.5h5v-2.5z"
                                        />
                                      </g>
                                    </svg>
                                  </span>
                                </span>
                              </span>
                            </div>
                          </span>
                          <div
                            class="pushed-content object-container"
                          >
                            <div
                              class="object-content"
                              style="margin-left: 6px;"
                            >
                              <div
                                class="variable-row"
                                style="border-left: 1px solid rgb(235, 235, 235); padding: 3px 5px 3px 20px;"
                              >
                                <span>
                                  <span
                                    class="object-key"
                                    style="display: inline-block; color: rgb(0, 43, 54); letter-spacing: 0.5px; font-style: none; vertical-align: top; opacity: 0.85;"
                                  >
                                    <span
                                      style="vertical-align: top;"
                                    >
                                      "
                                    </span>
                                    <span
                                      style="display: inline-block;"
                                    >
                                      app
                                    </span>
                                    <span
                                      style="vertical-align: top;"
                                    >
                                      "
                                    </span>
                                  </span>
                                  <span
                                    style="display: inline-block; margin: 0px 5px; color: rgb(0, 43, 54); vertical-align: top;"
                                  >
                                    :
                                  </span>
                                </span>
                                <div
                                  class="variable-value"
                                  style="display: inline-block; padding-right: 6px; position: relative; cursor: default;"
                                >
                                  <div
                                    style="display: inline-block; color: rgb(203, 75, 22);"
                                  >
                                    <span
                                      class="string-value"
                                      style="cursor: default;"
                                    >
                                      "atm-fraud-transactionavroproducer"
                                    </span>
                                  </div>
                                </div>
                                <span
                                  class="copy-to-clipboard-container"
                                  style="vertical-align: top; display: none;"
                                  title="Copy to clipboard"
                                >
                                  <span
                                    style="cursor: pointer; display: inline;"
                                  >
                                    <span
                                      class="copy-icon"
                                    >
                                      <svg
                                        fill="currentColor"
                                        preserveAspectRatio="xMidYMid meet"
                                        style="vertical-align: top; color: rgb(38, 139, 210); font-size: 15px; margin-right: 3px; height: 1em; width: 1em;"
                                        viewBox="0 0 40 40"
                                      >
                                        <g>
                                          <path
                                            d="m30 35h-25v-22.5h25v7.5h2.5v-12.5c0-1.4-1.1-2.5-2.5-2.5h-7.5c0-2.8-2.2-5-5-5s-5 2.2-5 5h-7.5c-1.4 0-2.5 1.1-2.5 2.5v27.5c0 1.4 1.1 2.5 2.5 2.5h25c1.4 0 2.5-1.1 2.5-2.5v-5h-2.5v5z m-20-27.5h2.5s2.5-1.1 2.5-2.5 1.1-2.5 2.5-2.5 2.5 1.1 2.5 2.5 1.3 2.5 2.5 2.5h2.5s2.5 1.1 2.5 2.5h-20c0-1.5 1.1-2.5 2.5-2.5z m-2.5 20h5v-2.5h-5v2.5z m17.5-5v-5l-10 7.5 10 7.5v-5h12.5v-5h-12.5z m-17.5 10h7.5v-2.5h-7.5v2.5z m12.5-17.5h-12.5v2.5h12.5v-2.5z m-7.5 5h-5v2.5h5v-2.5z"
                                          />
                                        </g>
                                      </svg>
                                    </span>
                                  </span>
                                </span>
                              </div>
                              <div
                                class="variable-row"
                                style="border-left: 1px solid rgb(235, 235, 235); padding: 3px 5px 3px 20px;"
                              >
                                <span>
                                  <span
                                    class="object-key"
                                    style="display: inline-block; color: rgb(0, 43, 54); letter-spacing: 0.5px; font-style: none; vertical-align: top; opacity: 0.85;"
                                  >
                                    <span
                                      style="vertical-align: top;"
                                    >
                                      "
                                    </span>
                                    <span
                                      style="display: inline-block;"
                                    >
                                      app.kubernetes.io/managed-by
                                    </span>
                                    <span
                                      style="vertical-align: top;"
                                    >
                                      "
                                    </span>
                                  </span>
                                  <span
                                    style="display: inline-block; margin: 0px 5px; color: rgb(0, 43, 54); vertical-align: top;"
                                  >
                                    :
                                  </span>
                                </span>
                                <div
                                  class="variable-value"
                                  style="display: inline-block; padding-right: 6px; position: relative; cursor: default;"
                                >
                                  <div
                                    style="display: inline-block; color: rgb(203, 75, 22);"
                                  >
                                    <span
                                      class="string-value"
                                      style="cursor: default;"
                                    >
                                      "Helm"
                                    </span>
                                  </div>
                                </div>
                                <span
                                  class="copy-to-clipboard-container"
                                  style="vertical-align: top; display: none;"
                                  title="Copy to clipboard"
                                >
                                  <span
                                    style="cursor: pointer; display: inline;"
                                  >
                                    <span
                                      class="copy-icon"
                                    >
                                      <svg
                                        fill="currentColor"
                                        preserveAspectRatio="xMidYMid meet"
                                        style="vertical-align: top; color: rgb(38, 139, 210); font-size: 15px; margin-right: 3px; height: 1em; width: 1em;"
                                        viewBox="0 0 40 40"
                                      >
                                        <g>
                                          <path
                                            d="m30 35h-25v-22.5h25v7.5h2.5v-12.5c0-1.4-1.1-2.5-2.5-2.5h-7.5c0-2.8-2.2-5-5-5s-5 2.2-5 5h-7.5c-1.4 0-2.5 1.1-2.5 2.5v27.5c0 1.4 1.1 2.5 2.5 2.5h25c1.4 0 2.5-1.1 2.5-2.5v-5h-2.5v5z m-20-27.5h2.5s2.5-1.1 2.5-2.5 1.1-2.5 2.5-2.5 2.5 1.1 2.5 2.5 1.3 2.5 2.5 2.5h2.5s2.5 1.1 2.5 2.5h-20c0-1.5 1.1-2.5 2.5-2.5z m-2.5 20h5v-2.5h-5v2.5z m17.5-5v-5l-10 7.5 10 7.5v-5h12.5v-5h-12.5z m-17.5 10h7.5v-2.5h-7.5v2.5z m12.5-17.5h-12.5v2.5h12.5v-2.5z m-7.5 5h-5v2.5h5v-2.5z"
                                          />
                                        </g>
                                      </svg>
                                    </span>
                                  </span>
                                </span>
                              </div>
                              <div
                                class="variable-row"
                                style="border-left: 1px solid rgb(235, 235, 235); padding: 3px 5px 3px 20px;"
                              >
                                <span>
                                  <span
                                    class="object-key"
                                    style="display: inline-block; color: rgb(0, 43, 54); letter-spacing: 0.5px; font-style: none; vertical-align: top; opacity: 0.85;"
                                  >
                                    <span
                                      style="vertical-align: top;"
                                    >
                                      "
                                    </span>
                                    <span
                                      style="display: inline-block;"
                                    >
                                      chart
                                    </span>
                                    <span
                                      style="vertical-align: top;"
                                    >
                                      "
                                    </span>
                                  </span>
                                  <span
                                    style="display: inline-block; margin: 0px 5px; color: rgb(0, 43, 54); vertical-align: top;"
                                  >
                                    :
                                  </span>
                                </span>
                                <div
                                  class="variable-value"
                                  style="display: inline-block; padding-right: 6px; position: relative; cursor: default;"
                                >
                                  <div
                                    style="display: inline-block; color: rgb(203, 75, 22);"
                                  >
                                    <span
                                      class="string-value"
                                      style="cursor: default;"
                                    >
                                      "streams-app-0.1.0"
                                    </span>
                                  </div>
                                </div>
                                <span
                                  class="copy-to-clipboard-container"
                                  style="vertical-align: top; display: none;"
                                  title="Copy to clipboard"
                                >
                                  <span
                                    style="cursor: pointer; display: inline;"
                                  >
                                    <span
                                      class="copy-icon"
                                    >
                                      <svg
                                        fill="currentColor"
                                        preserveAspectRatio="xMidYMid meet"
                                        style="vertical-align: top; color: rgb(38, 139, 210); font-size: 15px; margin-right: 3px; height: 1em; width: 1em;"
                                        viewBox="0 0 40 40"
                                      >
                                        <g>
                                          <path
                                            d="m30 35h-25v-22.5h25v7.5h2.5v-12.5c0-1.4-1.1-2.5-2.5-2.5h-7.5c0-2.8-2.2-5-5-5s-5 2.2-5 5h-7.5c-1.4 0-2.5 1.1-2.5 2.5v27.5c0 1.4 1.1 2.5 2.5 2.5h25c1.4 0 2.5-1.1 2.5-2.5v-5h-2.5v5z m-20-27.5h2.5s2.5-1.1 2.5-2.5 1.1-2.5 2.5-2.5 2.5 1.1 2.5 2.5 1.3 2.5 2.5 2.5h2.5s2.5 1.1 2.5 2.5h-20c0-1.5 1.1-2.5 2.5-2.5z m-2.5 20h5v-2.5h-5v2.5z m17.5-5v-5l-10 7.5 10 7.5v-5h12.5v-5h-12.5z m-17.5 10h7.5v-2.5h-7.5v2.5z m12.5-17.5h-12.5v2.5h12.5v-2.5z m-7.5 5h-5v2.5h5v-2.5z"
                                          />
                                        </g>
                                      </svg>
                                    </span>
                                  </span>
                                </span>
                              </div>
                              <div
                                class="variable-row"
                                style="border-left: 1px solid rgb(235, 235, 235); padding: 3px 5px 3px 20px;"
                              >
                                <span>
                                  <span
                                    class="object-key"
                                    style="display: inline-block; color: rgb(0, 43, 54); letter-spacing: 0.5px; font-style: none; vertical-align: top; opacity: 0.85;"
                                  >
                                    <span
                                      style="vertical-align: top;"
                                    >
                                      "
                                    </span>
                                    <span
                                      style="display: inline-block;"
                                    >
                                      pipeline
                                    </span>
                                    <span
                                      style="vertical-align: top;"
                                    >
                                      "
                                    </span>
                                  </span>
                                  <span
                                    style="display: inline-block; margin: 0px 5px; color: rgb(0, 43, 54); vertical-align: top;"
                                  >
                                    :
                                  </span>
                                </span>
                                <div
                                  class="variable-value"
                                  style="display: inline-block; padding-right: 6px; position: relative; cursor: default;"
                                >
                                  <div
                                    style="display: inline-block; color: rgb(203, 75, 22);"
                                  >
                                    <span
                                      class="string-value"
                                      style="cursor: default;"
                                    >
                                      "streams-explorer"
                                    </span>
                                  </div>
                                </div>
                                <span
                                  class="copy-to-clipboard-container"
                                  style="vertical-align: top; display: none;"
                                  title="Copy to clipboard"
                                >
                                  <span
                                    style="cursor: pointer; display: inline;"
                                  >
                                    <span
                                      class="copy-icon"
                                    >
                                      <svg
                                        fill="currentColor"
                                        preserveAspectRatio="xMidYMid meet"
                                        style="vertical-align: top; color: rgb(38, 139, 210); font-size: 15px; margin-right: 3px; height: 1em; width: 1em;"
                                        viewBox="0 0 40 40"
                                      >
                                        <g>
                                          <path
                                            d="m30 35h-25v-22.5h25v7.5h2.5v-12.5c0-1.4-1.1-2.5-2.5-2.5h-7.5c0-2.8-2.2-5-5-5s-5 2.2-5 5h-7.5c-1.4 0-2.5 1.1-2.5 2.5v27.5c0 1.4 1.1 2.5 2.5 2.5h25c1.4 0 2.5-1.1 2.5-2.5v-5h-2.5v5z m-20-27.5h2.5s2.5-1.1 2.5-2.5 1.1-2.5 2.5-2.5 2.5 1.1 2.5 2.5 1.3 2.5 2.5 2.5h2.5s2.5 1.1 2.5 2.5h-20c0-1.5 1.1-2.5 2.5-2.5z m-2.5 20h5v-2.5h-5v2.5z m17.5-5v-5l-10 7.5 10 7.5v-5h12.5v-5h-12.5z m-17.5 10h7.5v-2.5h-7.5v2.5z m12.5-17.5h-12.5v2.5h12.5v-2.5z m-7.5 5h-5v2.5h5v-2.5z"
                                          />
                                        </g>
                                      </svg>
                                    </span>
                                  </span>
                                </span>
                              </div>
                              <div
                                class="variable-row"
                                style="border-left: 1px solid rgb(235, 235, 235); padding: 3px 5px 3px 20px;"
                              >
                                <span>
                                  <span
                                    class="object-key"
                                    style="display: inline-block; color: rgb(0, 43, 54); letter-spacing: 0.5px; font-style: none; vertical-align: top; opacity: 0.85;"
                                  >
                                    <span
                                      style="vertical-align: top;"
                                    >
                                      "
                                    </span>
                                    <span
                                      style="display: inline-block;"
                                    >
                                      release
                                    </span>
                                    <span
                                      style="vertical-align: top;"
                                    >
                                      "
                                    </span>
                                  </span>
                                  <span
                                    style="display: inline-block; margin: 0px 5px; color: rgb(0, 43, 54); vertical-align: top;"
                                  >
                                    :
                                  </span>
                                </span>
                                <div
                                  class="variable-value"
                                  style="display: inline-block; padding-right: 6px; position: relative; cursor: default;"
                                >
                                  <div
                                    style="display: inline-block; color: rgb(203, 75, 22);"
                                  >
                                    <span
                                      class="string-value"
                                      style="cursor: default;"
                                    >
                                      "demo-transactionavroproducer"
                                    </span>
                                  </div>
                                </div>
                                <span
                                  class="copy-to-clipboard-container"
                                  style="vertical-align: top; display: none;"
                                  title="Copy to clipboard"
                                >
                                  <span
                                    style="cursor: pointer; display: inline;"
                                  >
                                    <span
                                      class="copy-icon"
                                    >
                                      <svg
                                        fill="currentColor"
                                        preserveAspectRatio="xMidYMid meet"
                                        style="vertical-align: top; color: rgb(38, 139, 210); font-size: 15px; margin-right: 3px; height: 1em; width: 1em;"
                                        viewBox="0 0 40 40"
                                      >
                                        <g>
                                          <path
                                            d="m30 35h-25v-22.5h25v7.5h2.5v-12.5c0-1.4-1.1-2.5-2.5-2.5h-7.5c0-2.8-2.2-5-5-5s-5 2.2-5 5h-7.5c-1.4 0-2.5 1.1-2.5 2.5v27.5c0 1.4 1.1 2.5 2.5 2.5h25c1.4 0 2.5-1.1 2.5-2.5v-5h-2.5v5z m-20-27.5h2.5s2.5-1.1 2.5-2.5 1.1-2.5 2.5-2.5 2.5 1.1 2.5 2.5 1.3 2.5 2.5 2.5h2.5s2.5 1.1 2.5 2.5h-20c0-1.5 1.1-2.5 2.5-2.5z m-2.5 20h5v-2.5h-5v2.5z m17.5-5v-5l-10 7.5 10 7.5v-5h12.5v-5h-12.5z m-17.5 10h7.5v-2.5h-7.5v2.5z m12.5-17.5h-12.5v2.5h12.5v-2.5z m-7.5 5h-5v2.5h5v-2.5z"
                                          />
                                        </g>
                                      </svg>
                                    </span>
                                  </span>
                                </span>
                              </div>
                            </div>
                          </div>
                          <span
                            class="brace-row"
                          >
                            <span
                              style="display: inline-block; cursor: pointer; font-weight: bold; color: rgb(0, 43, 54); padding-left: 3px;"
                            >
                              }
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`display node information should handle topic info 1`] = `
<DocumentFragment>
  <div
    class="ant-descriptions ant-descriptions-small ant-descriptions-bordered"
  >
    <div
      class="ant-descriptions-view"
    >
      <table>
        <tbody>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label descItem"
              colspan="1"
            >
              <span>
                Type
              </span>
            </th>
            <td
              class="ant-descriptions-item-content descItem"
              colspan="1"
            >
              <span>
                topic
              </span>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label descItem"
              colspan="1"
            >
              <span>
                Topic Monitoring
              </span>
            </th>
            <td
              class="ant-descriptions-item-content descItem"
              colspan="1"
            >
              <span>
                <div
                  class="ant-space ant-space-horizontal ant-space-align-center"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 8px;"
                  >
                    <a
                      class="ant-btn ant-btn-primary"
                      href="[object Object]"
                      target="_blank"
                    >
                      <span>
                        Topic Monitoring
                      </span>
                    </a>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <button
                      class="ant-btn ant-btn-icon-only"
                      type="button"
                    >
                      <span
                        aria-label="copy"
                        class="anticon anticon-copy"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="copy"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                </div>
              </span>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item-label descItem"
              colspan="1"
            >
              <span>
                Schema
              </span>
            </th>
            <td
              class="ant-descriptions-item-content descItem"
              colspan="1"
            >
              <span>
                <div
                  class="ant-space ant-space-vertical"
                >
                  <div
                    class="ant-space-item"
                    style="margin-bottom: 8px;"
                  >
                    <button
                      class="ant-btn ant-dropdown-trigger"
                      data-testid="schema-version"
                      type="button"
                    >
                      <span>
                        v2 
                      </span>
                      <span
                        aria-label="down"
                        class="anticon anticon-down"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="down"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <div
                      class="jsonDetail"
                    >
                      <div
                        class="react-json-view"
                        style="font-family: monospace; cursor: default; background-color: rgba(0, 0, 0, 0); position: relative;"
                      >
                        <div
                          class="pretty-json-container object-container"
                        >
                          <div
                            class="object-content"
                          >
                            <div
                              class="object-key-val"
                            >
                              <span>
                                <span
                                  style="display: inline-block; cursor: pointer;"
                                >
                                  <div
                                    class="icon-container"
                                    style="display: inline-block; width: 17px;"
                                  >
                                    <span
                                      class="expanded-icon"
                                    >
                                      <svg
                                        fill="currentColor"
                                        style="vertical-align: top; color: rgb(88, 110, 117); height: 1em; width: 1em; padding-left: 2px;"
                                        viewBox="0 0 15 15"
                                      >
                                        <path
                                          d="M0 5l6 6 6-6z"
                                        />
                                      </svg>
                                    </span>
                                  </div>
                                  <span />
                                  <span
                                    style="display: inline-block; cursor: pointer; font-weight: bold; color: rgb(0, 43, 54);"
                                  >
                                    {
                                  </span>
                                </span>
                                <div
                                  class="object-meta-data"
                                  style="display: inline-block; padding: 0px 0px 0px 10px;"
                                >
                                  <span
                                    class="object-size"
                                    style="color: rgba(0, 0, 0, 0.3); border-radius: 3px; font-style: italic; margin: 0px 6px 0px 0px; cursor: default;"
                                  >
                                    4 items
                                  </span>
                                  <span
                                    class="copy-to-clipboard-container"
                                    style="vertical-align: top; display: none;"
                                    title="Copy to clipboard"
                                  >
                                    <span
                                      style="cursor: pointer; display: inline;"
                                    >
                                      <span
                                        class="copy-icon"
                                      >
                                        <svg
                                          fill="currentColor"
                                          preserveAspectRatio="xMidYMid meet"
                                          style="vertical-align: top; color: rgb(38, 139, 210); font-size: 15px; margin-right: 3px; height: 1em; width: 1em;"
                                          viewBox="0 0 40 40"
                                        >
                                          <g>
                                            <path
                                              d="m30 35h-25v-22.5h25v7.5h2.5v-12.5c0-1.4-1.1-2.5-2.5-2.5h-7.5c0-2.8-2.2-5-5-5s-5 2.2-5 5h-7.5c-1.4 0-2.5 1.1-2.5 2.5v27.5c0 1.4 1.1 2.5 2.5 2.5h25c1.4 0 2.5-1.1 2.5-2.5v-5h-2.5v5z m-20-27.5h2.5s2.5-1.1 2.5-2.5 1.1-2.5 2.5-2.5 2.5 1.1 2.5 2.5 1.3 2.5 2.5 2.5h2.5s2.5 1.1 2.5 2.5h-20c0-1.5 1.1-2.5 2.5-2.5z m-2.5 20h5v-2.5h-5v2.5z m17.5-5v-5l-10 7.5 10 7.5v-5h12.5v-5h-12.5z m-17.5 10h7.5v-2.5h-7.5v2.5z m12.5-17.5h-12.5v2.5h12.5v-2.5z m-7.5 5h-5v2.5h5v-2.5z"
                                            />
                                          </g>
                                        </svg>
                                      </span>
                                    </span>
                                  </span>
                                </div>
                              </span>
                              <div
                                class="pushed-content object-container"
                              >
                                <div
                                  class="object-content"
                                  style="margin-left: 6px;"
                                >
                                  <div
                                    class="variable-row"
                                    style="border-left: 1px solid rgb(235, 235, 235); padding: 3px 5px 3px 20px;"
                                  >
                                    <span>
                                      <span
                                        class="object-key"
                                        style="display: inline-block; color: rgb(0, 43, 54); letter-spacing: 0.5px; font-style: none; vertical-align: top; opacity: 0.85;"
                                      >
                                        <span
                                          style="vertical-align: top;"
                                        >
                                          "
                                        </span>
                                        <span
                                          style="display: inline-block;"
                                        >
                                          type
                                        </span>
                                        <span
                                          style="vertical-align: top;"
                                        >
                                          "
                                        </span>
                                      </span>
                                      <span
                                        style="display: inline-block; margin: 0px 5px; color: rgb(0, 43, 54); vertical-align: top;"
                                      >
                                        :
                                      </span>
                                    </span>
                                    <div
                                      class="variable-value"
                                      style="display: inline-block; padding-right: 6px; position: relative; cursor: default;"
                                    >
                                      <div
                                        style="display: inline-block; color: rgb(203, 75, 22);"
                                      >
                                        <span
                                          class="string-value"
                                          style="cursor: default;"
                                        >
                                          "record"
                                        </span>
                                      </div>
                                    </div>
                                    <span
                                      class="copy-to-clipboard-container"
                                      style="vertical-align: top; display: none;"
                                      title="Copy to clipboard"
                                    >
                                      <span
                                        style="cursor: pointer; display: inline;"
                                      >
                                        <span
                                          class="copy-icon"
                                        >
                                          <svg
                                            fill="currentColor"
                                            preserveAspectRatio="xMidYMid meet"
                                            style="vertical-align: top; color: rgb(38, 139, 210); font-size: 15px; margin-right: 3px; height: 1em; width: 1em;"
                                            viewBox="0 0 40 40"
                                          >
                                            <g>
                                              <path
                                                d="m30 35h-25v-22.5h25v7.5h2.5v-12.5c0-1.4-1.1-2.5-2.5-2.5h-7.5c0-2.8-2.2-5-5-5s-5 2.2-5 5h-7.5c-1.4 0-2.5 1.1-2.5 2.5v27.5c0 1.4 1.1 2.5 2.5 2.5h25c1.4 0 2.5-1.1 2.5-2.5v-5h-2.5v5z m-20-27.5h2.5s2.5-1.1 2.5-2.5 1.1-2.5 2.5-2.5 2.5 1.1 2.5 2.5 1.3 2.5 2.5 2.5h2.5s2.5 1.1 2.5 2.5h-20c0-1.5 1.1-2.5 2.5-2.5z m-2.5 20h5v-2.5h-5v2.5z m17.5-5v-5l-10 7.5 10 7.5v-5h12.5v-5h-12.5z m-17.5 10h7.5v-2.5h-7.5v2.5z m12.5-17.5h-12.5v2.5h12.5v-2.5z m-7.5 5h-5v2.5h5v-2.5z"
                                              />
                                            </g>
                                          </svg>
                                        </span>
                                      </span>
                                    </span>
                                  </div>
                                  <div
                                    class="variable-row"
                                    style="border-left: 1px solid rgb(235, 235, 235); padding: 3px 5px 3px 20px;"
                                  >
                                    <span>
                                      <span
                                        class="object-key"
                                        style="display: inline-block; color: rgb(0, 43, 54); letter-spacing: 0.5px; font-style: none; vertical-align: top; opacity: 0.85;"
                                      >
                                        <span
                                          style="vertical-align: top;"
                                        >
                                          "
                                        </span>
                                        <span
                                          style="display: inline-block;"
                                        >
                                          name
                                        </span>
                                        <span
                                          style="vertical-align: top;"
                                        >
                                          "
                                        </span>
                                      </span>
                                      <span
                                        style="display: inline-block; margin: 0px 5px; color: rgb(0, 43, 54); vertical-align: top;"
                                      >
                                        :
                                      </span>
                                    </span>
                                    <div
                                      class="variable-value"
                                      style="display: inline-block; padding-right: 6px; position: relative; cursor: default;"
                                    >
                                      <div
                                        style="display: inline-block; color: rgb(203, 75, 22);"
                                      >
                                        <span
                                          class="string-value"
                                          style="cursor: default;"
                                        >
                                          "Transaction2"
                                        </span>
                                      </div>
                                    </div>
                                    <span
                                      class="copy-to-clipboard-container"
                                      style="vertical-align: top; display: none;"
                                      title="Copy to clipboard"
                                    >
                                      <span
                                        style="cursor: pointer; display: inline;"
                                      >
                                        <span
                                          class="copy-icon"
                                        >
                                          <svg
                                            fill="currentColor"
                                            preserveAspectRatio="xMidYMid meet"
                                            style="vertical-align: top; color: rgb(38, 139, 210); font-size: 15px; margin-right: 3px; height: 1em; width: 1em;"
                                            viewBox="0 0 40 40"
                                          >
                                            <g>
                                              <path
                                                d="m30 35h-25v-22.5h25v7.5h2.5v-12.5c0-1.4-1.1-2.5-2.5-2.5h-7.5c0-2.8-2.2-5-5-5s-5 2.2-5 5h-7.5c-1.4 0-2.5 1.1-2.5 2.5v27.5c0 1.4 1.1 2.5 2.5 2.5h25c1.4 0 2.5-1.1 2.5-2.5v-5h-2.5v5z m-20-27.5h2.5s2.5-1.1 2.5-2.5 1.1-2.5 2.5-2.5 2.5 1.1 2.5 2.5 1.3 2.5 2.5 2.5h2.5s2.5 1.1 2.5 2.5h-20c0-1.5 1.1-2.5 2.5-2.5z m-2.5 20h5v-2.5h-5v2.5z m17.5-5v-5l-10 7.5 10 7.5v-5h12.5v-5h-12.5z m-17.5 10h7.5v-2.5h-7.5v2.5z m12.5-17.5h-12.5v2.5h12.5v-2.5z m-7.5 5h-5v2.5h5v-2.5z"
                                              />
                                            </g>
                                          </svg>
                                        </span>
                                      </span>
                                    </span>
                                  </div>
                                  <div
                                    class="variable-row"
                                    style="border-left: 1px solid rgb(235, 235, 235); padding: 3px 5px 3px 20px;"
                                  >
                                    <span>
                                      <span
                                        class="object-key"
                                        style="display: inline-block; color: rgb(0, 43, 54); letter-spacing: 0.5px; font-style: none; vertical-align: top; opacity: 0.85;"
                                      >
                                        <span
                                          style="vertical-align: top;"
                                        >
                                          "
                                        </span>
                                        <span
                                          style="display: inline-block;"
                                        >
                                          namespace
                                        </span>
                                        <span
                                          style="vertical-align: top;"
                                        >
                                          "
                                        </span>
                                      </span>
                                      <span
                                        style="display: inline-block; margin: 0px 5px; color: rgb(0, 43, 54); vertical-align: top;"
                                      >
                                        :
                                      </span>
                                    </span>
                                    <div
                                      class="variable-value"
                                      style="display: inline-block; padding-right: 6px; position: relative; cursor: default;"
                                    >
                                      <div
                                        style="display: inline-block; color: rgb(203, 75, 22);"
                                      >
                                        <span
                                          class="string-value"
                                          style="cursor: default;"
                                        >
                                          "com.bakdata.kafka"
                                        </span>
                                      </div>
                                    </div>
                                    <span
                                      class="copy-to-clipboard-container"
                                      style="vertical-align: top; display: none;"
                                      title="Copy to clipboard"
                                    >
                                      <span
                                        style="cursor: pointer; display: inline;"
                                      >
                                        <span
                                          class="copy-icon"
                                        >
                                          <svg
                                            fill="currentColor"
                                            preserveAspectRatio="xMidYMid meet"
                                            style="vertical-align: top; color: rgb(38, 139, 210); font-size: 15px; margin-right: 3px; height: 1em; width: 1em;"
                                            viewBox="0 0 40 40"
                                          >
                                            <g>
                                              <path
                                                d="m30 35h-25v-22.5h25v7.5h2.5v-12.5c0-1.4-1.1-2.5-2.5-2.5h-7.5c0-2.8-2.2-5-5-5s-5 2.2-5 5h-7.5c-1.4 0-2.5 1.1-2.5 2.5v27.5c0 1.4 1.1 2.5 2.5 2.5h25c1.4 0 2.5-1.1 2.5-2.5v-5h-2.5v5z m-20-27.5h2.5s2.5-1.1 2.5-2.5 1.1-2.5 2.5-2.5 2.5 1.1 2.5 2.5 1.3 2.5 2.5 2.5h2.5s2.5 1.1 2.5 2.5h-20c0-1.5 1.1-2.5 2.5-2.5z m-2.5 20h5v-2.5h-5v2.5z m17.5-5v-5l-10 7.5 10 7.5v-5h12.5v-5h-12.5z m-17.5 10h7.5v-2.5h-7.5v2.5z m12.5-17.5h-12.5v2.5h12.5v-2.5z m-7.5 5h-5v2.5h5v-2.5z"
                                              />
                                            </g>
                                          </svg>
                                        </span>
                                      </span>
                                    </span>
                                  </div>
                                  <div
                                    class="object-key-val"
                                    style="border-left: 1px solid rgb(235, 235, 235); padding: 3px 5px 3px 20px;"
                                  >
                                    <span>
                                      <span
                                        style="display: inline-block; cursor: pointer;"
                                      >
                                        <div
                                          class="icon-container"
                                          style="display: inline-block; width: 17px;"
                                        >
                                          <span
                                            class="collapsed-icon"
                                          >
                                            <svg
                                              fill="currentColor"
                                              style="vertical-align: top; color: rgb(42, 161, 152); height: 1em; width: 1em; padding-left: 2px;"
                                              viewBox="0 0 15 15"
                                            >
                                              <path
                                                d="M0 14l6-6-6-6z"
                                              />
                                            </svg>
                                          </span>
                                        </div>
                                        <span
                                          style="display: inline-block; color: rgb(0, 43, 54); letter-spacing: 0.5px; font-style: none; vertical-align: top; opacity: 0.85;"
                                        >
                                          <span
                                            class="object-key"
                                          >
                                            <span
                                              style="vertical-align: top;"
                                            >
                                              "
                                            </span>
                                            <span>
                                              fields
                                            </span>
                                            <span
                                              style="vertical-align: top;"
                                            >
                                              "
                                            </span>
                                          </span>
                                          <span
                                            style="display: inline-block; margin: 0px 5px; color: rgb(0, 43, 54); vertical-align: top;"
                                          >
                                            :
                                          </span>
                                        </span>
                                        <span
                                          style="display: inline-block; cursor: pointer; font-weight: bold; color: rgb(0, 43, 54);"
                                        >
                                          [
                                        </span>
                                      </span>
                                    </span>
                                    <span
                                      class="brace-row"
                                    >
                                      <span
                                        style="display: inline-block; cursor: pointer; font-weight: bold; color: rgb(0, 43, 54); padding-left: 0px;"
                                      >
                                        ]
                                      </span>
                                      <div
                                        class="object-meta-data"
                                        style="display: inline-block; padding: 0px 0px 0px 10px;"
                                      >
                                        <span
                                          class="object-size"
                                          style="color: rgba(0, 0, 0, 0.3); border-radius: 3px; font-style: italic; margin: 0px 6px 0px 0px; cursor: default;"
                                        >
                                          0 items
                                        </span>
                                        <span
                                          class="copy-to-clipboard-container"
                                          style="vertical-align: top; display: none;"
                                          title="Copy to clipboard"
                                        >
                                          <span
                                            style="cursor: pointer; display: inline;"
                                          >
                                            <span
                                              class="copy-icon"
                                            >
                                              <svg
                                                fill="currentColor"
                                                preserveAspectRatio="xMidYMid meet"
                                                style="vertical-align: top; color: rgb(38, 139, 210); font-size: 15px; margin-right: 3px; height: 1em; width: 1em;"
                                                viewBox="0 0 40 40"
                                              >
                                                <g>
                                                  <path
                                                    d="m30 35h-25v-22.5h25v7.5h2.5v-12.5c0-1.4-1.1-2.5-2.5-2.5h-7.5c0-2.8-2.2-5-5-5s-5 2.2-5 5h-7.5c-1.4 0-2.5 1.1-2.5 2.5v27.5c0 1.4 1.1 2.5 2.5 2.5h25c1.4 0 2.5-1.1 2.5-2.5v-5h-2.5v5z m-20-27.5h2.5s2.5-1.1 2.5-2.5 1.1-2.5 2.5-2.5 2.5 1.1 2.5 2.5 1.3 2.5 2.5 2.5h2.5s2.5 1.1 2.5 2.5h-20c0-1.5 1.1-2.5 2.5-2.5z m-2.5 20h5v-2.5h-5v2.5z m17.5-5v-5l-10 7.5 10 7.5v-5h12.5v-5h-12.5z m-17.5 10h7.5v-2.5h-7.5v2.5z m12.5-17.5h-12.5v2.5h12.5v-2.5z m-7.5 5h-5v2.5h5v-2.5z"
                                                  />
                                                </g>
                                              </svg>
                                            </span>
                                          </span>
                                        </span>
                                      </div>
                                    </span>
                                  </div>
                                </div>
                              </div>
                              <span
                                class="brace-row"
                              >
                                <span
                                  style="display: inline-block; cursor: pointer; font-weight: bold; color: rgb(0, 43, 54); padding-left: 3px;"
                                >
                                  }
                                </span>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;
